# fast_runner

./: Cargo.toml  README.md
src/: main.rs
src/args/: arg.rs  mod.rs
